# ShaderProject

./: .gitignore  CMakeLists.txt  README.md  buildconfig.h.in  run.bat
src/: camera.h  main.cpp  shader.h
src/shader/: rock.frag  rock.vert  shader.frag  shader.geom  shader.vert
